--- a/templates/feed/index.html.twig
+++ b/templates/feed/index.html.twig
@@ -1,17 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Feed index{% endblock %}
+{% block title %}Feeds{% endblock %}
 
 {% block body %}
-    <h1>Feed index</h1>
+    {% include 'flash_messages.html.twig' %}
+    <h4>Feeds</h4>
 
-    <table class="table">
+    <div class="row">
+        <div class="col-sm-12"><a class="btn btn-success" href="{{ path('feed_new') }}">Create new</a></div>
+    </div>
+    <table class="table feed-list">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Url</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -20,13 +22,11 @@
             <tr>
                 <td>{{ feed.id }}</td>
                 <td>{{ feed.url }}</td>
-                <td>{{ feed.createdAt ? feed.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ feed.updatedAt ? feed.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('feed_edit', {'id': feed.id}) }}">edit</a>
+                    <a class="btn btn-primary" href="{{ path('feed_edit', {'id': feed.id}) }}">Edit</a>
                     <form method="post" action="{{ path('feed_delete', {'id': feed.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ feed.id) }}">
-                        <button class="btn">Delete</button>
+                        <button class="btn btn-danger">Delete</button>
                     </form>
                 </td>
             </tr>
@@ -37,6 +37,4 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('feed_new') }}">Create new</a>
 {% endblock %}
