--- a/templates/feed/index.html.twig
+++ b/templates/feed/index.html.twig
@@ -21,7 +21,7 @@
         {% for feed in feeds %}
             <tr>
                 <td>{{ feed.id }}</td>
-                <td>{{ feed.url }}</td>
+                <td><a href="{{ path('content_index', {'id': feed.id}) }}">{{ feed.url }}</a></td>
                 <td>
                     <a class="btn btn-primary" href="{{ path('feed_edit', {'id': feed.id}) }}">Edit</a>
                     <form method="post" action="{{ path('feed_delete', {'id': feed.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
